# buddy_mm

./: CMakeLists.txt  Makefile  main.c
buddy_mm/: buddy_mm.c  buddy_mm.h
parser/: parser.c  parser.h
properties/: commands.c  commands.h  errors.c  errors.h  messages.h  settings.h
tests/: mm_test.c  parser_test.c
